[gd_scene load_steps=7 format=3 uid="uid://bllmarad26s51"]

[ext_resource type="Script" path="res://judge_sence/timeSystem.gd" id="1_bgup1"]
[ext_resource type="Texture2D" uid="uid://cfnvwqmeb8hjo" path="res://judge_sence/sprites/Time & weather.png" id="1_n32lr"]
[ext_resource type="FontFile" uid="uid://cxe2ygnd717oj" path="res://fonts/px.ttf" id="1_pkpa8"]
[ext_resource type="Script" path="res://judge_sence/date_time.gd" id="1_x3vvc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tsf5y"]
atlas = ExtResource("1_n32lr")
region = Rect2(16, 176, 48, 48)

[sub_resource type="Resource" id="Resource_tqrkv"]
script = ExtResource("1_x3vvc")
seconds = 0
minutes = 0
hours = 0
days = 0

[node name="DateTime" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -150.0
offset_top = 30.0
offset_right = -18.0
offset_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_tsf5y")

[node name="TimeLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pkpa8")
text = "19:20:20"

[node name="TimeSystem" type="Node" parent="."]
script = ExtResource("1_bgup1")
date_time = SubResource("Resource_tqrkv")
ticks_per_second = 1
